[gd_scene load_steps=6 format=3 uid="uid://rdxsk7psk7g8"]

[ext_resource type="Script" uid="uid://bwyb16y88jnb5" path="res://scripts/endings/game_over.gd" id="1_4col0"]
[ext_resource type="Texture2D" uid="uid://bagqqcfpwj4r3" path="res://sprites/endings/game_over.png" id="1_w37ny"]
[ext_resource type="Texture2D" uid="uid://bi3dq3q66qn58" path="res://sprites/itens/botao_replay.png" id="2_4col0"]
[ext_resource type="Texture2D" uid="uid://cp2pq7g56dtvs" path="res://sprites/itens/botao_menu.png" id="3_ruysn"]
[ext_resource type="AudioStream" uid="uid://l2l0vtku0bka" path="res://sounds/Game Over.wav" id="4_4col0"]

[node name="GameOver" type="ParallaxBackground"]
script = ExtResource("1_4col0")

[node name="Layer" type="ParallaxLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Layer"]
texture_filter = 1
position = Vector2(128.5, 128.5)
scale = Vector2(0.200781, 0.200781)
texture = ExtResource("1_w37ny")

[node name="Replay" type="Button" parent="."]
texture_filter = 1
offset_left = 103.0
offset_top = 88.0
offset_right = 151.0
offset_bottom = 116.0
icon = ExtResource("2_4col0")
flat = true

[node name="Menu" type="Button" parent="."]
texture_filter = 1
offset_left = 103.0
offset_top = 116.0
offset_right = 151.0
offset_bottom = 144.0
icon = ExtResource("3_ruysn")
flat = true

[node name="GameOverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4col0")
autoplay = true

[connection signal="pressed" from="Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
